// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`* multiple words 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "raw": null,
              "type": "syntax",
              "value": "*",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 13,
                  "line": 1,
                  "offset": 12,
                },
                "indent": Array [],
                "start": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "raw": "foo bar baz",
              "type": "text",
              "value": "foo bar baz",
            },
            Object {
              "raw": null,
              "type": "syntax",
              "value": "*",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "raw": "*foo bar baz*",
          "type": "emphasis",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "raw": "*foo bar baz*",
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "raw": "*foo bar baz*",
  "type": "root",
}
`;

exports[`* nested emphasis 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "raw": null,
              "type": "syntax",
              "value": "*",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "indent": Array [],
                "start": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "raw": "foo ",
              "type": "text",
              "value": "foo ",
            },
            Object {
              "raw": null,
              "type": "syntax",
              "value": "*",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "raw": "*foo *",
          "type": "emphasis",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "indent": Array [],
            "start": Object {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "raw": "bar",
          "type": "text",
          "value": "bar",
        },
        Object {
          "children": Array [
            Object {
              "raw": null,
              "type": "syntax",
              "value": "*",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 15,
                  "line": 1,
                  "offset": 14,
                },
                "indent": Array [],
                "start": Object {
                  "column": 11,
                  "line": 1,
                  "offset": 10,
                },
              },
              "raw": " baz",
              "type": "text",
              "value": " baz",
            },
            Object {
              "raw": null,
              "type": "syntax",
              "value": "*",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "indent": Array [],
            "start": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
          },
          "raw": "* baz*",
          "type": "emphasis",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "raw": "*foo *bar* baz*",
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 16,
      "line": 1,
      "offset": 15,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "raw": "*foo *bar* baz*",
  "type": "root",
}
`;

exports[`* nested strong 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "raw": null,
              "type": "syntax",
              "value": "*",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "indent": Array [],
                "start": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "raw": "foo ",
              "type": "text",
              "value": "foo ",
            },
            Object {
              "children": Array [
                Object {
                  "raw": null,
                  "type": "syntax",
                  "value": "**",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 11,
                      "line": 1,
                      "offset": 10,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 8,
                      "line": 1,
                      "offset": 7,
                    },
                  },
                  "raw": "bar",
                  "type": "text",
                  "value": "bar",
                },
                Object {
                  "raw": null,
                  "type": "syntax",
                  "value": "**",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 13,
                  "line": 1,
                  "offset": 12,
                },
                "indent": Array [],
                "start": Object {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
              },
              "raw": "**bar**",
              "type": "strong",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 17,
                  "line": 1,
                  "offset": 16,
                },
                "indent": Array [],
                "start": Object {
                  "column": 13,
                  "line": 1,
                  "offset": 12,
                },
              },
              "raw": " baz",
              "type": "text",
              "value": " baz",
            },
            Object {
              "raw": null,
              "type": "syntax",
              "value": "*",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "raw": "*foo **bar** baz*",
          "type": "emphasis",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 18,
          "line": 1,
          "offset": 17,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "raw": "*foo **bar** baz*",
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "raw": "*foo **bar** baz*",
  "type": "root",
}
`;

exports[`* single word 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "raw": null,
              "type": "syntax",
              "value": "*",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
                "indent": Array [],
                "start": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "raw": "foo",
              "type": "text",
              "value": "foo",
            },
            Object {
              "raw": null,
              "type": "syntax",
              "value": "*",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "raw": "*foo*",
          "type": "emphasis",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "raw": "*foo*",
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 6,
      "line": 1,
      "offset": 5,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "raw": "*foo*",
  "type": "root",
}
`;

exports[`* split across multiple lines 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "raw": null,
              "type": "syntax",
              "value": "*",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
                "indent": Array [],
                "start": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "raw": "foo",
              "type": "text",
              "value": "foo",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 5,
                },
                "indent": Array [
                  1,
                ],
                "start": Object {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "raw": "
",
              "type": "lineFeed",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 4,
                  "line": 2,
                  "offset": 8,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 5,
                },
              },
              "raw": "bar",
              "type": "text",
              "value": "bar",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 1,
                  "line": 3,
                  "offset": 9,
                },
                "indent": Array [
                  1,
                ],
                "start": Object {
                  "column": 4,
                  "line": 2,
                  "offset": 8,
                },
              },
              "raw": "
",
              "type": "lineFeed",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 4,
                  "line": 3,
                  "offset": 12,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 3,
                  "offset": 9,
                },
              },
              "raw": "baz",
              "type": "text",
              "value": "baz",
            },
            Object {
              "raw": null,
              "type": "syntax",
              "value": "*",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 5,
              "line": 3,
              "offset": 13,
            },
            "indent": Array [
              1,
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "raw": "*foo
bar
baz*",
          "type": "emphasis",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 5,
          "line": 3,
          "offset": 13,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "raw": "*foo
bar
baz*",
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 5,
      "line": 3,
      "offset": 13,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "raw": "*foo
bar
baz*",
  "type": "root",
}
`;

exports[`_ multiple words 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "raw": null,
              "type": "syntax",
              "value": "_",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 13,
                  "line": 1,
                  "offset": 12,
                },
                "indent": Array [],
                "start": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "raw": "foo bar baz",
              "type": "text",
              "value": "foo bar baz",
            },
            Object {
              "raw": null,
              "type": "syntax",
              "value": "_",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "raw": "_foo bar baz_",
          "type": "emphasis",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "raw": "_foo bar baz_",
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "raw": "_foo bar baz_",
  "type": "root",
}
`;

exports[`_ nested emphasis 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "raw": null,
              "type": "syntax",
              "value": "_",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "indent": Array [],
                "start": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "raw": "foo ",
              "type": "text",
              "value": "foo ",
            },
            Object {
              "children": Array [
                Object {
                  "raw": null,
                  "type": "syntax",
                  "value": "*",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                  },
                  "raw": "bar",
                  "type": "text",
                  "value": "bar",
                },
                Object {
                  "raw": null,
                  "type": "syntax",
                  "value": "*",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 11,
                  "line": 1,
                  "offset": 10,
                },
                "indent": Array [],
                "start": Object {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
              },
              "raw": "*bar*",
              "type": "emphasis",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 15,
                  "line": 1,
                  "offset": 14,
                },
                "indent": Array [],
                "start": Object {
                  "column": 11,
                  "line": 1,
                  "offset": 10,
                },
              },
              "raw": " baz",
              "type": "text",
              "value": " baz",
            },
            Object {
              "raw": null,
              "type": "syntax",
              "value": "_",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "raw": "_foo *bar* baz_",
          "type": "emphasis",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "raw": "_foo *bar* baz_",
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 16,
      "line": 1,
      "offset": 15,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "raw": "_foo *bar* baz_",
  "type": "root",
}
`;

exports[`_ nested strong 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "raw": null,
              "type": "syntax",
              "value": "_",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "indent": Array [],
                "start": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "raw": "foo ",
              "type": "text",
              "value": "foo ",
            },
            Object {
              "children": Array [
                Object {
                  "raw": null,
                  "type": "syntax",
                  "value": "**",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 11,
                      "line": 1,
                      "offset": 10,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 8,
                      "line": 1,
                      "offset": 7,
                    },
                  },
                  "raw": "bar",
                  "type": "text",
                  "value": "bar",
                },
                Object {
                  "raw": null,
                  "type": "syntax",
                  "value": "**",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 13,
                  "line": 1,
                  "offset": 12,
                },
                "indent": Array [],
                "start": Object {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
              },
              "raw": "**bar**",
              "type": "strong",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 17,
                  "line": 1,
                  "offset": 16,
                },
                "indent": Array [],
                "start": Object {
                  "column": 13,
                  "line": 1,
                  "offset": 12,
                },
              },
              "raw": " baz",
              "type": "text",
              "value": " baz",
            },
            Object {
              "raw": null,
              "type": "syntax",
              "value": "_",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "raw": "_foo **bar** baz_",
          "type": "emphasis",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 18,
          "line": 1,
          "offset": 17,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "raw": "_foo **bar** baz_",
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "raw": "_foo **bar** baz_",
  "type": "root",
}
`;

exports[`_ single word 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "raw": null,
              "type": "syntax",
              "value": "_",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
                "indent": Array [],
                "start": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "raw": "foo",
              "type": "text",
              "value": "foo",
            },
            Object {
              "raw": null,
              "type": "syntax",
              "value": "_",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "raw": "_foo_",
          "type": "emphasis",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "raw": "_foo_",
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 6,
      "line": 1,
      "offset": 5,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "raw": "_foo_",
  "type": "root",
}
`;

exports[`_ split across multiple lines 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "raw": null,
              "type": "syntax",
              "value": "_",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
                "indent": Array [],
                "start": Object {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "raw": "foo",
              "type": "text",
              "value": "foo",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 5,
                },
                "indent": Array [
                  1,
                ],
                "start": Object {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "raw": "
",
              "type": "lineFeed",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 4,
                  "line": 2,
                  "offset": 8,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 5,
                },
              },
              "raw": "bar",
              "type": "text",
              "value": "bar",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 1,
                  "line": 3,
                  "offset": 9,
                },
                "indent": Array [
                  1,
                ],
                "start": Object {
                  "column": 4,
                  "line": 2,
                  "offset": 8,
                },
              },
              "raw": "
",
              "type": "lineFeed",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 4,
                  "line": 3,
                  "offset": 12,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 3,
                  "offset": 9,
                },
              },
              "raw": "baz",
              "type": "text",
              "value": "baz",
            },
            Object {
              "raw": null,
              "type": "syntax",
              "value": "_",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 5,
              "line": 3,
              "offset": 13,
            },
            "indent": Array [
              1,
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "raw": "_foo
bar
baz_",
          "type": "emphasis",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 5,
          "line": 3,
          "offset": 13,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "raw": "_foo
bar
baz_",
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 5,
      "line": 3,
      "offset": 13,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "raw": "_foo
bar
baz_",
  "type": "root",
}
`;
